# Big-Greenhouse-Energy

./: .dockerignore  Dockerfile  README.md
sensor/: Cargo.toml  build.rs
sensor/src/: main.rs
sensor/src/protos/: sensor.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/protos/: mod.rs  sensor.rs  viewer.rs
shared/protos/: sensor.proto  viewer.proto
viewer/: .eslintcache  package.json
viewer/src/protos/: viewer.js
