[package]
name = "bge_sensor"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.13"
url = "2.2"
protobuf = "2.20"

[dependencies.tokio]
features = ["full"]
version = "1.1"

[build-dependencies]
protoc-rust = "2.20"
