[package]
name = "bge_server"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
warp = "0.3"
parking_lot = "0.11"

[dependencies.tokio]
features = ["full"]
version = "1.1"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "sqlite"]
version = "0.4"
